Fix typer and aside
Fixing aside in mobile and typer extra line.

--- a/css/style.css
+++ b/css/style.css
@@ -735,6 +735,12 @@ footer .boton {
 
     }
 
+    /* ASIDE */
+
+    #hipsterCat {
+        height: 100px;
+    }
+
     #ces #gato-animado {
         width: 60%;
     }
