--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@
     --base-color2: #ffffff;
     --alt-color1: #1F5A62;
     --alt-color2: #F1A557;
-
 }
 
 * {
@@ -26,13 +25,20 @@
 
 
 
+@-webkit-keyframes spinner {
+    to {-webkit-transform: rotate(360deg);transform: rotate(360deg);}
+}
+
+
+
 @keyframes spinner {
-    to {transform: rotate(360deg);}
+    to {-webkit-transform: rotate(360deg);transform: rotate(360deg);}
 }
 
 .spinner:before {
     content: '';
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     position: absolute;
     top: calc(50% - 50px);
     left: calc(50% - 50px);
@@ -43,7 +49,8 @@
     border-top-color: var(--base-color2);
     border-right-color: var(--alt-color2);
     border-bottom-color: var(--base-color2);
-    animation: spinner .6s linear infinite;
+    -webkit-animation: spinner .6s linear infinite;
+            animation: spinner .6s linear infinite;
 }
 
 
@@ -151,9 +158,16 @@ footer {
 
 section {
     height: 100vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-	flex-direction: column;
-	justify-content: center;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
 }
 
 hr {
@@ -192,7 +206,9 @@ hr {
     stroke: var(--alt-color1);
     stroke-width: 3;
     stroke-dasharray: 422, 0;
-    transition-delay: none;
+    -webkit-transition-delay: none;
+         -o-transition-delay: none;
+            transition-delay: none;
 }
 
 .btn:hover {
@@ -206,6 +222,8 @@ hr {
     stroke-width: 5;
     stroke-dasharray: 15, 310;
     stroke-dashoffset: 48;
+    -webkit-transition: all 1.35s cubic-bezier(0.19, 1, 0.22, 1);
+    -o-transition: all 1.35s cubic-bezier(0.19, 1, 0.22, 1);
     transition: all 1.35s cubic-bezier(0.19, 1, 0.22, 1);
 }
 
@@ -219,6 +237,8 @@ hr {
     top: 10px;
     right: 14px;
     opacity: .5;
+    -webkit-transition: .5s ease-in-out;
+    -o-transition: .5s ease-in-out;
     transition: .5s ease-in-out;
     cursor: pointer;
     text-shadow: 0 0 10px white, 0 0 10px white, 0 0 10px white;
@@ -234,7 +254,11 @@ hr {
     border-radius: 9px;
     opacity: 1;
     left: 0;
-    transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
+            transform: rotate(0deg);
+    -webkit-transition: .25s ease-in-out;
+    -o-transition: .25s ease-in-out;
     transition: .25s ease-in-out;
 }
 
@@ -261,11 +285,15 @@ left: 50%;
 }
 
 .barras.open span:nth-child(2) {
-transform: rotate(45deg);
+-webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+        transform: rotate(45deg);
 }
 
 .barras.open span:nth-child(3) {
-transform: rotate(-45deg);
+-webkit-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+        transform: rotate(-45deg);
 }
 
 .barras.open span:nth-child(4) {
@@ -282,13 +310,17 @@ left: 50%;
     width: 100%;
     background: var(--alt-color1);
     text-align: center;
+    -webkit-transition: all .8s;
+    -o-transition: all .8s;
     transition: all .8s;
     border-bottom: 1px solid var(--alt-color1);
     z-index: 700;
 }
 
 #menu.oculto {
-    transform: translateY(-100%);
+    -webkit-transform: translateY(-100%);
+        -ms-transform: translateY(-100%);
+            transform: translateY(-100%);
 }
 
 /* Classes menú responsive */
@@ -432,7 +464,9 @@ left: 50%;
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
     font-size: 8em;
     color:var(--alt-color1);
     cursor: pointer;
@@ -515,7 +549,8 @@ left: 50%;
     color: var(--base-color2);
     padding: 1rem;
     border: 2px dashed rgba(255, 255, 255, 0);
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     cursor: text;
 }
 
@@ -705,15 +740,21 @@ footer .boton {
         width: 100%;
         height: 100vh;
         border-right: 1px solid #999;
-        transform: translateX(-100%)
+        -webkit-transform: translateX(-100%);
+            -ms-transform: translateX(-100%);
+                transform: translateX(-100%)
     }
 
     #menu.oculto {
-        transform: translate(-100%, -100%);
+        -webkit-transform: translate(-100%, -100%);
+            -ms-transform: translate(-100%, -100%);
+                transform: translate(-100%, -100%);
     }
 
     #menu.abierto {
-        transform: translateX(0);
+        -webkit-transform: translateX(0);
+            -ms-transform: translateX(0);
+                transform: translateX(0);
     }
 
     #menu ul {
